# Ori-WotW-difficulty-changer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: qa.yml
ori_wotw_difficulty_changer/: difficulty.py  offsets.py
tests/: conftest.py  test_cli.py  test_difficulty.py  test_offsets.py
tests/save_files/: saveFile_easy.uberstate  saveFile_hard.uberstate  saveFile_medium.uberstate
